# mitochime

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.arm.yml  environment.yml  mitochime_local_lab_runs.ipynb  mitochime_local_lab_setup_and_runs.md  mitochime_processed_files.txt  mitochime_pwd.txt  mitochime_src_files.txt  pyproject.toml  requirements.txt  tmp_q.fa  tmp_q_vs_ref.paf  train_deep_top.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
configs/: config.example.yaml  config.local.yaml
documentation/: abstract.aux  abstract.tex  appendix_A.aux  appendix_A.tex  appendix_B.aux  appendix_B.tex  appendix_C.tex  appendix_D.tex  appendix_E.tex  appendix_F.tex  appendix_G.tex  chapter_1.tex  chapter_2.tex  chapter_3.tex  chapter_4.tex  chapter_5.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  myreferences.bib  preamble.tex  title_page.aux  title_page.tex
kaggle_bundle_mitochime/: README_kaggle.txt
models/: bagging_trees.joblib  catboost.joblib  dummy_baseline.joblib  gaussian_nb.joblib  gradient_boosting.joblib  lightgbm.joblib  lightgbm_tuned.joblib  linear_svm_calibrated.joblib  logreg_l2.joblib  mlp.joblib  qda.joblib  random_forest_tuned.joblib  xgboost.joblib  xgboost_tuned.joblib
models_PAIR_noq_tuned/: catboost_tuned.joblib  gradient_boosting_tuned.joblib  lightgbm_tuned.joblib  linear_svm_calibrated_tuned.joblib  logreg_l2_tuned.joblib  mlp_tuned.joblib  xgboost_tuned.joblib
models_noq_tuned/: catboost_tuned.joblib  (+6 more)
(+6462 files in other folders)
