[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "mitochime"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]  # matches Black

[tool.isort]
profile = "black"
line_length = 88